--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,15 @@
     "dependencies": {
         "@material-ui/core": "^4.3.2",
         "@material-ui/icons": "^4.2.1",
+        "firebase": "^6.4.0",
+        "formik": "^1.5.8",
+        "lodash": "^4.17.15",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.1.1",
-        "styled-components": "^4.3.2"
+        "styled-components": "^4.3.2",
+        "yup": "^0.27.0"
     },
     "devDependencies": {
         "eslint-config-prettier": "^6.0.0",
