--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@material-ui/core": "^4.3.2",
         "@material-ui/icons": "^4.2.1",
+        "clsx": "^1.0.4",
         "firebase": "^6.4.0",
         "formik": "^1.5.8",
         "lodash": "^4.17.15",
