--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
         "firebase": "^6.4.0",
         "formik": "^1.5.8",
         "lodash": "^4.17.15",
+        "moment": "^2.24.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
