--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.1.1",
+        "recharts": "^1.7.1",
         "styled-components": "^4.3.2",
         "yup": "^0.27.0"
     },
