--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,10 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "@date-io/moment": "^1.3.9",
         "@material-ui/core": "^4.3.3",
         "@material-ui/icons": "^4.2.1",
+        "@material-ui/pickers": "^3.2.4",
         "clsx": "^1.0.4",
         "firebase": "^6.4.0",
         "formik": "^1.5.8",
@@ -21,6 +23,7 @@
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.1.1",
+        "react-swipeable-views": "^0.13.3",
         "recharts": "^1.7.1",
         "styled-components": "^4.3.2",
         "yup": "^0.27.0"
