--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "formik": "^1.5.8",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
+        "query-string": "^6.8.3",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
