CSV export: first iteration

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "@material-ui/icons": "^4.2.1",
         "@material-ui/pickers": "^3.2.4",
         "clsx": "^1.0.4",
+        "file-saver": "^2.0.2",
         "firebase": "^6.4.0",
         "formik": "^1.5.8",
+        "json2csv": "^4.5.2",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "query-string": "^6.8.3",
